colang-cli/tests/samples/features/templates/compilation_error/wrong_number_of_type_arguments.co
struct Wrapper<T> {
  arr: [T];

}

fun main() {
  var w: Wrapper<int, bool>;
}
